# jarvis

./: .gitignore  README.md  api.py  docker-compose.yml  jarvis.py  main.py  pyproject.toml  requirements.txt
deployments/inventory/group_vars/: example.all.yaml
deployments/playbooks/: app.yaml  cert_manager.yaml  ingress.yaml
deployments/roles/app/tasks/: main.yaml
deployments/roles/app/templates/: back.yaml  front.yaml  namespace.yaml
deployments/roles/cert-manager/tasks/: install.yaml  main.yaml
deployments/roles/cert-manager/templates/: prod_certificate.yaml  prod_issuer.yaml
deployments/roles/ingress-nginx/tasks/: main.yaml  nlb-route53-record.yaml
deployments/roles/ingress-nginx/templates/: ingress.yaml
infra/live/: example.backend.conf  example.project.conf
infra/live/01-vpc/: 00-backend.tf  00-locals.tf  00-variables.tf  01-vpc.tf  99-outputs.tf
infra/live/02-ecr/: 00-backend.tf  00-locals.tf  00-variables.tf  01-ecr.tf
infra/live/03-eks/: 00-backend.tf  00-locals.tf  00-variables.tf  01-eks.tf  99-outputs.tf
infra/live/04-iam/: 00-backend.tf  00-locals.tf  00-variables.tf  01-iam.tf  99-outputs.tf
infra/modules/ecr/: inputs.tf  main.tf
infra/modules/eks/: inputs.tf  main.tf  outputs.tf
infra/modules/iam/: inputs.tf  main.tf  outputs.tf
infra/modules/vpc/: inputs.tf  main.tf  outputs.tf
infra/setup/: main.tf  outputs.tf  variables.tf  versions.tf
ops/back/: Dockerfile
ops/front/: Dockerfile
src/back/: main.py
src/front/: app.py
